--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-rnd": "^10.4.1",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.28",
+    "svg-path-commander": "^2.0.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
